--- a/inst/tutorials/12transportProcesses/transportProcesses.Rmd
+++ b/inst/tutorials/12transportProcesses/transportProcesses.Rmd
@@ -159,7 +159,7 @@ question("When does the above equation apply?", type = "learnr_checkbox",
 Continue this tutorial series by learning about different types of transport fluxes:
 
 ```
-RTMturorial("transportFluxes")
+RTMtutorial("transportFluxes")
 ```
 
 ## Textbook and Slides
